--- a/server/public/styles/styles.css
+++ b/server/public/styles/styles.css
@@ -1,8 +1,10 @@
-body{
-    margin: 50px;
+body {
+  margin: 50px;
 }
-#tableWrapper, #tableWrapper td{
-    border: 1px solid black;
-    border-collapse: collapse;
-    padding: 10px;
+
+.tableWrapper,
+.tableWrapper td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 10px;
 }
